@@ -14,6 +14,8 @@ Bug Fixes
 * GITHUB#14523, GITHUB#14530: Correct TermOrdValComparator competitive iterator so that it forces sparse
   field iteration to be at least scoring window baseline when doing intoBitSet. (Ben Trent, Adrien Grand)
 
+* GITHUB#14445: Provide better impacts for fields indexed with IndexOptions.DOCS GITHUB#14511 (Aniketh Jain)
+
 * GITHUB#14543: Fixed lead cost computations for bulk scorers of conjunctive
   queries that mix MUST and FILTER clauses, and disjunctive queries that
   configure a minimum number of matching SHOULD clauses.
